tests/ui/derive/fail_validate_serde_deserialize_with_field.stderr
error: Foundry contract derives cannot represent custom serde field transforms such as `#[serde(with = "...")]`, `#[serde(serialize_with = "...")]`, or `#[serde(deserialize_with = "...")]`; use an explicit typed DTO shape or normalize legacy input before validation
  --> tests/ui/derive/fail_validate_serde_deserialize_with_field.rs:12:32
   |
12 |     #[serde(deserialize_with = "deserialize_email")]
   |                                ^^^^^^^^^^^^^^^^^^^
